2006-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Cleanup in awele. Now uses translatable strings for NORTH and SOUTH.
	- Changed to use GCompris reload button instead of 'in game' one

	* boards/awele/awele_frame.jpg:
	* boards/awele/awele_frame.png:
	* boards/awele/awele_frame_avec_messages.png:
	* boards/awele/nv_partie.png:
	* boards/awele/nv_partie_clic.png:
	* boards/awele/nv_partie_notify.png:
	* po/TRANSLATORS.README:
	* src/boards/awele.c: (start_board), (repeat), (awele_create_item),
	(buttonNewGameClick):
	* src/boards/awele.h:
	* src/boards/python/electric.py:
	* src/gcompris/gcompris-edit.glade: removed, useless file
	* src/gcompris/gcompris-edit.gladep: -

2006-01-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed po file list

	* boards/geography/board4_2.xml.in:
	* po/POTFILES.in:
	* po/POTFILES.skip:

2006-01-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- Review of English strings by Clytie Siddall
	- Improved the submarine icon based on a Nicu icon from openclipart.org
	- Fixed Tux_mute.png, it was commited without -kb option and was obviously corrupted.
	
	* INSTALL:
	* boards/administration.xml.in:
	* boards/awele.xml.in:
	* boards/babymatch.xml.in:
	* boards/babyshapes.xml.in:
	* boards/boardicons/submarine.png:
	* boards/chronos/board3_0.xml.in:
	* boards/connect4.xml.in:
	* boards/crane.xml.in:
	* boards/electric.xml.in:
	* boards/gcompris/misc/Tux_mute.png:
	* boards/geography/board2_0.xml.in:
	* boards/geography/board4_0.xml.in:
	* boards/gnumch-equality.xml.in:
	* boards/gnumch-factors.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/gnumch-multiples.xml.in:
	* boards/gnumch-primes.xml.in:
	* boards/guessnumber.xml.in:
	* boards/hanoi.xml.in:
	* boards/hanoi_real.xml.in:
	* boards/login.xml.in:
	* boards/mazeMenu.xml.in:
	* boards/memory_sound_tux.xml.in:
	* boards/memory_tux.xml.in:
	* boards/menu.xml.in:
	* boards/readingh.xml.in:
	* boards/redraw_symmetrical.xml.in:
	* boards/reversecount.xml.in:
	* boards/smallnumbers.xml.in: