@@ -7,6 +7,6 @@
 	 icon="boardicons/experience.png"
 	 author="">
 	 <_title>Go to experiential activities</_title>
-	 <_description>Various physical based activities.</_description>
+	 <_description>Various activities based on physical movement.</_description>
   </Board>
 </GCompris>
