@@ -7,6 +7,6 @@
          icon="boardicons/gnumch.png"
          author="">
          <_title>Go to Number Munchers activities</_title>
-         <_description>Number Munchers are games to play with arythmetics.</_description>
+         <_description>Number Munchers are games to play with arithmetic.</_description>
   </Board>
 </GCompris>
