@@ -6,7 +6,7 @@
 	 section="/discovery"
 	 icon="boardicons/miscelaneous.png"
 	 author="">
-	 <_title>Miscelaneous activities</_title>
+	 <_title>Miscellaneous activities</_title>
 	 <_description>Time, Geography, ... </_description>
   </Board>
 </GCompris>
