@@ -7,6 +7,6 @@
 	 icon="boardicons/mouse.png"
 	 author="">
 	 <_title>Mouse-manipulation activities.</_title>
-	 <_description>Various kind of mouse activities (clicks, move)</_description>
+	 <_description>Various mouse-based activities (clicking, moving)</_description>
   </Board>
 </GCompris>
