@@ -7,6 +7,6 @@
 	 icon="boardicons/puzzles.png"
 	 author="">
 	 <_title>Puzzles</_title>
-	 <_description>Various kind of puzzle.</_description>
+	 <_description>Various puzzles.</_description>
   </Board>
 </GCompris>
